--- a/New folder/WebApplication1/ngview.html
+++ b/New folder/WebApplication1/ngview.html
@@ -10,8 +10,8 @@
 <body>
     <div ng-app="custViewApp">
         <div ng-controller="custViewController">
-            <a href="#/page1">page 1</a>
-            <a href="#/page2">page 1</a>
+            <a href="#/page1/123">page 1</a>
+            <a href="#/page2/Angularjs">page 2</a>
             <br/>
             <ng-view></ng-view>
         </div>
